# stock_market_data_kafka_ec2_s3

./: .gitignore  README.md  kafka_consumer.py  pyproject.toml  stock_market_script.py
python_package_template/: __init__.py  python_package_template.py
