[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_package_template"
authors = ["Timothy Cameron <timiancam@gmail.com>"]
version = "1.0"
description = "Produces a Kafka Consumer and Producer where simulated market data is uploaded to an S3 bucket."
readme = "README.md"
keywords = ["Kafka", "Producer", "EC2", "S3", "Apache", "AWS", "Python", "Pandas", "Daemon Thread"]
license = "MIT"
repository = "https://github.com/timiancam/stock_market_data_kafka_ec2_s3"
packages = [
    { include = "stock_market_data_kafka_ec2_s3" },
]

[tool.poetry.dependencies]
python = "^3.11"
kafka = "^1.3.5"
s3fs = "^2024.3.1"
pandas = "^2.2.1"
kafka-python = "^2.0.2"
